[gd_scene load_steps=10 format=3 uid="uid://7q8cfhqkttj2"]

[ext_resource type="Script" path="res://scripts/principal.gd" id="1_aa5qt"]
[ext_resource type="Texture2D" uid="uid://wjdl2ocqc61f" path="res://assets/Flappy Bird Assets 1.6 (Zip)/Flappy Bird Assets/Background/Background3.png" id="1_pru4n"]
[ext_resource type="PackedScene" uid="uid://ce3xjl2bfcaac" path="res://escenas/tuberias_varias.tscn" id="2_jv2so"]
[ext_resource type="Texture2D" uid="uid://b8ob2dhkwihcd" path="res://assets/Flappy Bird Assets 1.6 (Zip)/suelo2.png" id="2_qsktu"]
[ext_resource type="PackedScene" uid="uid://qev44xdtdo8n" path="res://escenas/pajaroo.tscn" id="3_yimyq"]
[ext_resource type="PackedScene" uid="uid://c6yes35jwc5fb" path="res://escenas/gui.tscn" id="6_6m8vd"]
[ext_resource type="AudioStream" uid="uid://cupxj3kf80d56" path="res://assets/FlappyBirdR-resources/SFX/sfx_die.ogg" id="7_us4hp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg3qm"]
size = Vector2(288, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u135p"]
size = Vector2(308, 20)

[node name="Principal" type="Node"]
script = ExtResource("1_aa5qt")
tuberia_escena = ExtResource("2_jv2so")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(288, 0)
autoscroll = Vector2(-30, 0)

[node name="Background3" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(144, 256)
scale = Vector2(1.125, 1.99805)
texture = ExtResource("1_pru4n")

[node name="Background3" type="Sprite2D" parent="ParallaxBackground/Background3"]
position = Vector2(528, 0.500618)
scale = Vector2(1.125, 1.00489)
texture = ExtResource("1_pru4n")

[node name="ParallaxSuelo" type="Parallax2D" parent="."]
repeat_size = Vector2(205, 0)
autoscroll = Vector2(-60, 0)

[node name="Suelo2" type="Sprite2D" parent="ParallaxSuelo"]
position = Vector2(185.5, 524)
scale = Vector2(1.80976, 1)
texture = ExtResource("2_qsktu")

[node name="Suelo3" type="Sprite2D" parent="ParallaxSuelo"]
position = Vector2(910, 524)
scale = Vector2(3.27523, 1)
texture = ExtResource("2_qsktu")

[node name="Pajaro" parent="." instance=ExtResource("3_yimyq")]
z_index = 1
position = Vector2(190, 357)

[node name="TimerTuberia" type="Timer" parent="."]
wait_time = 1.5

[node name="GUI" parent="." instance=ExtResource("6_6m8vd")]

[node name="SueloArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SueloArea"]
position = Vector2(146, 502)
shape = SubResource("RectangleShape2D_kg3qm")

[node name="CieloArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CieloArea"]
position = Vector2(144, 0)
shape = SubResource("RectangleShape2D_u135p")

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_us4hp")

[connection signal="timeout" from="TimerTuberia" to="." method="_on_timer_tuberia_timeout"]
[connection signal="body_entered" from="SueloArea" to="." method="_on_suelo_area_body_entered"]
[connection signal="body_entered" from="CieloArea" to="." method="_on_cielo_area_body_entered"]
